# Please enter the commit message for your changes. Lines starting # with '#' will be ignored, and an empty message aborts the commit. # On branch master # Your branch is ahead of 'origin/master' by 2 commits. #   (use "git push" to publish your local commits) #

--- a/html5_testing/WebContent/index.html
+++ b/html5_testing/WebContent/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+    <meta charset="ISO-8859-1">
+
+    <title>Testing HTML5</title>
+
+    <script type="javascript" src="../bower_components/angular/angular.min.js"></script>
+
 </head>
+
 <body>
-<button>Hello Daniel Ovalle Fernandez</button>
+
+    <button>Hello Daniel Ovalle Fernandez!</button>
+
 </body>
+
 </html>
